Migrated CollectionMethod